force-app/main/default/objects/Campaign/fields/sugati__CA_Cost_per_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>sugati__CA_Cost_per_Enquiry__c</fullName>
    <formula>AmountAllOpportunities /  NumberOfOpportunities</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost per Enquiry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>