force-app/main/default/objects/Campaign/fields/sugati__CAM_Cost_per_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__CAM_Cost_per_Booking__c</fullName>
    <formula>AmountWonOpportunities /  NumberOfWonOpportunities</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost per Booking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>