force-app/main/default/objects/Campaign/fields/sugati__S_C_Applicable_On_Tour__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_Applicable_On_Tour__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When it is checked this campaign will be visible for the Tour Bookings</inlineHelpText>
    <label>Applicable On Tour</label>
    <type>Checkbox</type>
</CustomField>