force-app/main/default/objects/Campaign/fields/sugati__S_C_Minimum_Nights__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_Minimum_Nights__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Minimum Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>