force-app/main/default/objects/Campaign/fields/sugati__S_C_Promotional_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_Promotional_Code__c</fullName>
    <label>Promotional Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>