force-app/main/default/objects/Campaign/fields/sugati__S_C_Promotional_Code_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_Promotional_Code_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotional Code Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>