force-app/main/default/objects/Campaign/fields/sugati__S_C_Promotional_Code_Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_Promotional_Code_Quantity_Available__c</fullName>
    <label>Promotional Code Quantity Available</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>