force-app/main/default/objects/Campaign/fields/sugati__S_C_Promotional_Code_Restrict_to_Members__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_Promotional_Code_Restrict_to_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promotional Code Restrict to Members</label>
    <type>Checkbox</type>
</CustomField>