force-app/main/default/objects/Campaign/fields/sugati__S_C_Promotional_Code_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_C_Promotional_Code_Value__c</fullName>
    <label>Promotional Code Value</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>